--- a/index.html
+++ b/index.html
@@ -13,8 +13,86 @@
         <title>Meet The Team</title>
     </head>
     <body>
-        <section class="container">
-
+        <section class="container-fluid">
+            <div class="row centrer">
+                <div class="head">
+                    <h1>Meet The Team</h1>
+                    <p>
+                        We have a fabulous team of staff at the salon, who work extremely well alongside each
+                        other. All of our beauticians and hair stylists are fully trained, and are renowned for their
+                        customer care, thorough treatments and friendly working environment.
+                        <br><br>
+                        Images from <a class="yellow" href="#">Freepik</a>
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-lg-4 nopad">
+                    <div class="col-12 bloc">
+                        <img class="femme" src="./blonde.jpg" alt="Image de femme">
+                    </div>
+                    <div class="col-12 bloc back">
+                        <div class="txt">
+                            <h2>Becky</h2>
+                            <h3>SALON MANAGER</h3>
+                            <p>
+                                Sample text. Click to select the box. Click
+                                again or double click to start editing the
+                                text.
+                            </p>
+                            <a href="#">LEARN MORE</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 nopad">
+                    <div class="col-12 d-none d-lg-block">
+                        <div class="bloc">
+                            <div class="txt">
+                                <h2>Caroline</h2>
+                                <h3>HEAD THERAPIST</h3>
+                                <p>
+                                    Sample text. Click to select the box. Click
+                                    again or double click to start editing the
+                                    text.
+                                </p>
+                                <a href="#">LEARN MORE</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 bloc">
+                        <img class="femme" src="./brown.jpg" alt="Image de femme">
+                    </div>
+                    <div class="col-12 bloc d-lg-none">
+                        <div class="txt">
+                            <h2>Caroline</h2>
+                            <h3>HEAD THERAPIST</h3>
+                            <p>
+                                Sample text. Click to select the box. Click
+                                again or double click to start editing the
+                                text.
+                            </p>
+                            <a href="#">LEARN MORE</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 nopad">
+                    <div class="col-12 bloc">
+                        <img class="femme" src="./girl.jpg" alt="Image de femme">
+                    </div>
+                    <div class="col-12 bloc">
+                        <div class="txt">
+                            <h2>Laura</h2>
+                            <h3>BEAUTY THERAPIST</h3>
+                            <p>
+                                Sample text. Click to select the box. Click
+                                again or double click to start editing the
+                                text.
+                            </p>
+                            <a href="#">LEARN MORE</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </body>
     <!-- JavaScript Bundle with Popper -->
